clover-logging-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clover-logging-deployment
  namespace: clover-dev
  labels:
    app: clover-logging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clover-logging
  template:
    metadata:
      labels:
        app: clover-logging
    spec:
      serviceAccountName: clover-sa
      containers:
      - name: clover-logging
        image: mkrish2/clover-logging:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
