clover-logging-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clover-logging-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: clover-logging-service
                port:
                  number: 8888
